--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -5,7 +5,6 @@
   align-items: center;
   gap: 3em;
   padding: 0 4em;
-  text-align: center;
 }
 .container a {
   display: flex;
@@ -49,4 +48,22 @@
 .header .downloadCv:hover {
   border: 1px solid #000;
   color: #000;
+}
+
+@media (max-width: 480px) {
+  .header {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  nav {
+    display: none;
+  }
+  .header section a {
+    display: none;
+  }
+  .downloadCv {
+    display: none;
+  }
 }
