--- a/src/components/Projects/Card/styles.module.css
+++ b/src/components/Projects/Card/styles.module.css
@@ -10,6 +10,7 @@
 }
 .card img {
   width: 100%;
+  height: 14em;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   object-fit: cover;
@@ -18,7 +19,7 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 2em;
+  gap: 1em;
 }
 .descricao {
   font-size: 20px;
